[metadata]
name = parse-xspec-dburke.gw
version = 0.1.0
author = Doug Burke
author_email = dburke.gw@gmail.com
description = Parse files used by XSPEC (highly experimental)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cxcsds/parse_xspec
project_urls =
    Bug Tracker = https://github.com/cxcsds/parse_xspec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src